📦 🌡 💦 Adds coordinates and includes runnables in container