@@ -2,4 +2,8 @@
 
 java -jar --enable-preview -Dspring.profiles.active=demo bl-web-app.jar &
 
+java -jar --enable-preview -Dspring.profiles.active=demo bl-sensor-data-collector.jar &
+
+java -jar --enable-preview -Dspring.profiles.active=demo bl-merchandise-data-collector.jar &
+
 tail -f /dev/null
